# vanir-gui-agent-linux

./: Makefile  Makefile.builder  README.md  debian-quilt  series-debian-vm.conf
appvm-scripts/: vanir-gui-agent.service  vanir-gui-vm.gschema.override
appvm-scripts/etc/X11/: xorg-vanir.conf.template
appvm-scripts/etc/X11/Xsession.d/: 20qt-gnome-desktop-session-id  20qt-x11-no-mitshm  25xdg-vanir-settings
appvm-scripts/etc/X11/xinit/xinitrc.d/: 00-ck-xinit-session.sh  10-ck-register-session.sh  50-xfce-desktop.sh  vanir-keymap.sh
appvm-scripts/etc/init.d/: vanir-gui-agent
appvm-scripts/etc/pam.d/: vanir-gui-agent  vanir-gui-agent.archlinux  vanir-gui-agent.debian
appvm-scripts/etc/profile.d/: vanir-gui.csh  vanir-session.sh
appvm-scripts/etc/securitylimits.d/: 90-vanir-gui.conf
appvm-scripts/etc/sysconfig/: desktop
appvm-scripts/etc/tmpfiles.d/: vanir-pulseaudio.conf  vanir-session.conf
appvm-scripts/etc/vanir-rpc/: vanir.SetMonitorLayout
appvm-scripts/etc/xdg/: Trolltech.conf
appvm-scripts/etc/xdg-debian/: Xresources  fonts.conf  xsettingsd
appvm-scripts/etc/xdgautostart/: vanir-polkit-gnome-authentication-agent-1.desktop  vanir-pulseaudio.desktop
appvm-scripts/lib/udev/rules.d/: 70-master-of-seat.rules
appvm-scripts/usr/lib/sysctl.d/: 30-vanir-gui-agent.conf
appvm-scripts/usrbin/: vanir-change-keyboard-layout  vanir-run-xorg  vanir-session  vanir-set-monitor-layout
archlinux/: PKGBUILD  PKGBUILD-pulseaudio.install  PKGBUILD-z-vanir-session.sh  PKGBUILD.install
debian/: control  pulseaudio-vanir.install  pulseaudio-vanir.lintian-overrides  pulseaudio-vanir.postinst  pulseaudio-vanir.triggers  rules  vanir-gui-agent.install  vanir-gui-agent.maintscript  vanir-gui-agent.postinst  vanir-gui-agent.prerm  xserver-xorg-input-vanir.install  xserver-xorg-vanir-common.install  xserver-xorg-video-dummyqbs.install
gui-agent/: Makefile  vmside.c
gui-common/: Makefile  error.c  txrx-vchan.c  vanir-gui-runuser.c
include/: list.h  txrx.h  xdriver-shm-cmd.h
patches.debian/: 01_setXDG_DIR.patch
pulse/: Makefile  module-vchan-sink-symdef.h  module-vchan-sink.c
pulse/pulsecore-12.0/: arpa-inet.h  asyncq.h  atomic.h  card.h  client.h  core-format.h  core-util.h  core.h  creds.h  database.h  device-port.h  dynarray.h  hashmap.h  i18n.h  macro.h  mcalign.h  mem.h  memblock.h  memblockq.h  modargs.h  module.h  native-common.h  object.h  poll.h  queue.h  remap.h  resampler.h  rtpoll.h  sink-input.h  sink.h  socket-server.h  socket-util.h  socket.h  source-output.h  source.h  tagstruct.h  x11wrap.h
rpm_spec/: gui-agent.spec.in
window-icon-updater/: icon-sender  vanir-icon-sender.desktop
xf86-input-mfndev/: Makefile.am  configure.ac  xorg-vanir.pc.in
xf86-input-mfndev/src/: Makefile.am  vanir.c  vanir.h
xf86-vanircommon/: Makefile  xf86-vanir-common.c
xf86-vanircommon/include/: xf86-vanir-common.h
xf86-video-dummy/: Makefile.am  README  configure.ac
xf86-video-dummy/src/: Makefile.am  compat-api.h  dummy.h  dummy_cursor.c  dummy_dga.c  dummy_driver.c
